# couchbase-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: hello.rs
sdk/couchbase/: Cargo.toml
sdk/couchbase-connstr/: Cargo.toml
sdk/couchbase-core/: Cargo.toml
sdk/protostellar/: Cargo.toml
src/: bucket.rs  cluster.rs  collection.rs  error.rs  kv.rs  lib.rs  query.rs
src/core/: auth.rs  endpoint.rs  mod.rs  node.rs
src/core/msg/: kv.rs  mod.rs  query.rs
src/util/: connstr.rs  mod.rs
